<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello droid-planner!</string>
    <string name="app_name">droid-planner</string>
    <string name="pushButton">Browse files</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_eula">Disclaimer</string>
    <string name="menu_exit">Exit</string>
    <string name="message_exit">Are you sure wants to exit?</string>
    <string name="title_exit">Question</string>
    <string name="value_yes">Yes</string>
    <string name="value_no">No</string>
    <string name="value_ok">Ok</string>
    <string name="message_working">Working...</string>

    <string name="stat_dir">Directory</string>
    <string name="stat_symlink">Symbolic link</string>
    <string name="stat_file">File</string>

    <string name="pref_settings_title">Settings</string>
    <string name="pref_about_title">About</string>

    <string name="pref_settings_key">settings</string>
    <string name="pref_about_key">about</string>

    <string name="pref_do_sort_title">Sort alphabetically</string>
    <string name="pref_do_sort_summary">Sort alphabetically</string>
    <string name="pref_do_sort_key">sort_alphabetically</string>

    <string name="working_progress_label">Working...</string>
    <string name="check_files_label">Checking files at folder : %s</string>

    <string name="pref_dialog_about_title">About program</string>
    <string name="pref_dialog_about_message"><![CDATA[Droid planner @2011 (dchrislee@gmail.com)]]></string>
    <string name="activity_not_found"><![CDATA[File couldn\'t be opened. No any application associated with the %s extension]]></string>

    <string name="not_implemented">Feature %s not implemented</string>
    <string name="long_press_feature">Long press</string>
    <string name="error_open_file">Error while opening a file: %s</string>


    <string name="actions_title">Choose an action</string>
    <string name="action_open">Open ...</string>
    <string name="action_remove">Delete</string>
    <string name="action_move">Move</string>

    <string name="question_remove">Are you really sure want to remove %s?</string>
    <string name="error_remove">Cannot delete %s.</string>
    <string name="error_not_found">%s not found.</string>

    <string name="default_mime_type">binary/octet-stream</string>
</resources>
