<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_settings_title" android:key="@string/pref_settings_key">
        <CheckBoxPreference
                android:key="@string/pref_do_sort_key"
                android:summary="@string/pref_do_sort_summary"
                android:title="@string/pref_do_sort_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about_title" android:key="@string/pref_about_key">
        <DialogPreference
                android:title="@string/pref_dialog_about_title"
                android:dialogTitle="@string/pref_dialog_about_title"
                android:dialogMessage="@string/pref_dialog_about_message"/>
    </PreferenceCategory>
</PreferenceScreen>